# bevy-voxel-engine-updated

./: Cargo.toml
src/: load.rs  main.rs
src/voxel_pipeline/: mod.rs  voxel_world.rs  voxelization.rs
src/voxel_pipeline/compute/: animation.wgsl  automata.wgsl  clear.wgsl  mod.rs  physics.wgsl  rebuild.rs  rebuild.wgsl
src/voxel_pipeline/shaders/: bindings.wgsl  common.wgsl  raytracing.wgsl  voxelization.wgsl
src/voxel_pipeline/trace/: mod.rs  node.rs  trace.wgsl
