[package]
name = "bevy-voxel-engine"
version = "0.1.0"
edition = "2021"
description = "A raytraced, small world voxel engine built with the bevy game engine"
exclude = ["assets/"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_pbr",
    "bevy_render",
    "bevy_asset",
    "x11",
    "png",
    "tonemapping_luts",
    "vorbis"
] }
bytemuck = "1.15.0"
dot_vox = "5.1.1"
wgpu = "0.20.1"
bevy_egui = "0.29"
rand = "0.8"
tinyfiledialogs = "3.9"
bevy_mod_debugdump = "0.11.1"
bevy_obj = "0.14"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3